chore: finish initial draft of Vercel deployment docs

--- a/src/pages/migrations-deployments/deployment-guides/vercel.mdx
+++ b/src/pages/migrations-deployments/deployment-guides/vercel.mdx
@@ -50,16 +50,24 @@ On the details page for your project, go to "Settings" in the navigation bar at 
 
 In the "Settings" sidebar, select "Environment Variables" and add your API keys from [your Clerk dashboard](https://dashboard.clerk.com/):![](./vercel-environmental-variables.png)
 
-When adding Environment Variables, you can select which keys associate with which Vercel deployment Environments. You can use this to customize
+When adding Environment Variables, you can select which keys associate with which Vercel deployment Environments.
+
+Using this, you can have your `Production` Vercel environment use your production Clerk API keys, while keeping your preview and development Vercel deployments using your development Clerk API keys.
 
 ## Support for Vercel Preview URLs \[#support-vercel-preview-urls]
 
-When using Vercel's GitHub integrations, you'll
+[Vercel provides a method for easily deploying preview URLs for development environments, like GitHub PRs.](https://vercel.com/docs/concepts/deployments/generated-urls) An example of this preview functionality might look something like this:
 
-https://vercel.com/docs/concepts/deployments/generated-urls
+![](./vercel-github-comment.png)
 
-Clerk redirects from preview URLs will be automatically handled for you when using our pre-built components and middleware.
+**If you're using your Clerk development key for this Vercel preview deployment, everything will work out-of-the-box.**
 
-https://vercel.com/docs/concepts/deployments/generated-urls#preview-deployment-suffix
+> We use Clerk magic to automatically detect the domain you're hosting from and handle redirects for you! ✨
+
+However, **if you wish to use your production Clerk keys with a preview Vercel deployment, you'll need to utilize [Vercel's preview deploment suffix customization](https://vercel.com/docs/concepts/deployments/generated-urls#preview-deployment-suffix) to host preview URLs under your primary domain's subdomain**.
+
+We do this to ensure your users' security by restricting production redirects to fall under your production domain. This prevents bad actors from maliciously requesting login access to their own domains.
+
+> We take security very seriously at Clerk. To learn more about how we ensure your user's security, [please refer to our docs on the subject.](https://clerk.com/docs/security/introduction)
 
 > Please note that modifying the Preview Deployment Suffix is only available as an add-on to Vercel's Pro plans and above.
