--- a/src/pages/migrations-deployments/deployment-guides/vercel.mdx
+++ b/src/pages/migrations-deployments/deployment-guides/vercel.mdx
@@ -2,7 +2,7 @@
 
 Deploying a Clerk app to a Vercel project enables you to rapidly develop your applications and deploy them to production with ease.
 
-Let's walk through:
+Let's walk through the following:
 
 *   How to set up a new Vercel project
 *   How to integrate Clerk into your Vercel project
@@ -12,23 +12,23 @@ Let's walk through:
 
 > This guide assumes that you have already [set up a Clerk application](/get-started/setup-clerk) that you're ready to deploy. If you haven't yet, be sure to [check out our guide to creating a new Clerk app](/get-started/setup-clerk).
 
-To setup a new Vercel project, start by [going to your Vercel Dashboard](https://vercel.com/dashboard). Here, you'll see a list of your projects or, if you don't have any projects yet, a prompt to create a new project:
+To set up a new Vercel project, start by [going to your Vercel Dashboard](https://vercel.com/dashboard). Here, you'll see a list of your projects or, if you don't have any projects yet, a prompt to create a new project:
 
-![](./vercel-no-new-projects.png)
+![A Vercel dashboard with a "No projects, yet!" message. Buttons to create a new project and browse templates are present.](./vercel-no-new-projects.png)
 
 Create a new project by pressing the "Add New" button in the top right corner of the screen or by [pressing this link](https://vercel.com/new):
 
-![](./vercel-add-new-dropdown.png)
+![The top right corner shows an "Add New" dropdown. Press the "Project" item in the dropdown](./vercel-add-new-dropdown.png)
 
 Once done, you'll see the option to import a Git repository. Find the repository you want to use and press "Import":
 
-![](./vercel-import-git-repository.png)
+![An "Import Git Repository" screen provides a few options, including selecting an organization and list of related repositories to import](./vercel-import-git-repository.png)
 
 Once you've selected a project to deploy, you'll be directed to the "Configure Project" page.
 
 On this page, **make sure to add "[Environment Variables](https://vercel.com/docs/concepts/projects/environment-variables)" from [your app's Clerk dashboard](https://dashboard.clerk.com/)** so that your Vercel project will be connected to your Clerk app properly:
 
-![](./vercel-configure-project.png)
+![The "Configure Project" page allows you to add environment variables, select a framework preset, and more](./vercel-configure-project.png)
 
 The API keys added on this screen will be assigned to all deployments on Vercel, including preview URLs. To connect your first deployment to your Clerk app, be sure to **use your Clerk production API keys rather than your development API keys**.
 
@@ -42,23 +42,25 @@ Once you press "Deploy", your app will deploy to production!
 
 To add your Clerk API keys to an existing Vercel project, start by selecting your project [from your Vercel dashboard](https://vercel.com/dashboard):
 
-![](./vercel-existing-project.png)
+![A card for the "clerk-nextjs-starter" project on our Vercel dashboard](./vercel-existing-project.png)
 
 On the details page for your project, go to "Settings" in the navigation bar at the top:
 
-![](./vercel-project-details.png)
+![When you open a project, there's a list of navigation items at the top. At the end of these items is "Settings"](./vercel-project-details.png)
 
-In the "Settings" sidebar, select "Environment Variables" and add your API keys from [your Clerk dashboard](https://dashboard.clerk.com/):![](./vercel-environmental-variables.png)
+In the "Settings" sidebar, select "Environment Variables" and add your API keys from [your Clerk dashboard](https://dashboard.clerk.com/):
+
+![In the project settings for a Vercel project, there's a list of settings. Four items from the bottom is "Environment Variables"](./vercel-environmental-variables.png)
 
 When adding Environment Variables, you can select which keys associate with which Vercel deployment Environments.
 
-Using this, you can have your `Production` Vercel environment use your production Clerk API keys, while keeping your preview and development Vercel deployments using your development Clerk API keys.
+Using this, you can have your `Production` Vercel environment use your production Clerk API keys while keeping your preview and development Vercel deployments using your development Clerk API keys.
 
 ## Support for Vercel Preview URLs \[#support-vercel-preview-urls]
 
-[Vercel provides a method for easily deploying preview URLs for development environments, like GitHub PRs.](https://vercel.com/docs/concepts/deployments/generated-urls) An example of this preview functionality might look something like this:
+[Vercel provides a method for easily deploying preview URLs for development environments like GitHub PRs.](https://vercel.com/docs/concepts/deployments/generated-urls) An example of this preview functionality might look something like this:
 
-![](./vercel-github-comment.png)
+![A comment on a GitHub pull request from the Vercel bot showing a preview link of your project](./vercel-github-comment.png)
 
 **If you're using your Clerk development key for this Vercel preview deployment, everything will work out-of-the-box.**
 
