--- a/src/pages/quickstarts/native/expo.mdx
+++ b/src/pages/quickstarts/native/expo.mdx
@@ -39,11 +39,7 @@ Once you have a Expo application ready, you need to install Clerk's Expo SDK.
 
 ## Set Environment Variables
 
-Below is an example of an `.env.local` and `app.config.js` files. To get your keys go to the API Keys page on the [Clerk dashboard](https://dashboard.clerk.com).
-
-```sh copy filename=".env.local"
-CLERK_PUBLISHABLE_KEY=pk_test_••••••••••••••••••••••••••••••••••
-```
+Below is an example of an `app.config.js` file. To get your keys go to the API Keys page on the [Clerk dashboard](https://dashboard.clerk.com).
 
 ```sh copy filename="app.config.js"
 module.exports = {
@@ -54,6 +50,10 @@ module.exports = {
   },
 };
 ```
+
+<Callout type="info">
+  For further information, check [Environment variables in Expo](https://docs.expo.dev/guides/environment-variables)
+</Callout>
 
 
 ## Mount `<ClerkProvider>`
