chore: make reference docs headers more consistent

--- a/src/pages/reference-react/internals/use-sign-in.mdx
+++ b/src/pages/reference-react/internals/use-sign-in.mdx
@@ -2,7 +2,7 @@ import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
 
-# `useSignIn`
+# `useSignIn()`
 
 The `useSignIn` hook gives you access to the SignIn object, which allows you to check the current state of a sign in and sign in users with custom flows.
 
