--- a/src/pages/reference-react/internals/use-sign-up.mdx
+++ b/src/pages/reference-react/internals/use-sign-up.mdx
@@ -2,7 +2,7 @@ import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
 
-# `useSignUp`
+# `useSignUp()`
 
 The `useSignUp` hook gives you access to the SignUp object, which allows you to check the current state of a sign up and sign up users with custom flows.
 
