--- a/src/pages/reference-react/user-management/use-auth.mdx
+++ b/src/pages/reference-react/user-management/use-auth.mdx
@@ -2,7 +2,7 @@ import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
 
-# useAuth
+# `useAuth()`
 
 The `useAuth` hook provides lightweight access to the current auth state, helpers to manage the state and load data from external sources.
 
