--- a/src/pages/reference-react/internals/use-clerk.mdx
+++ b/src/pages/reference-react/internals/use-clerk.mdx
@@ -2,7 +2,7 @@ import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
 
-# useClerk
+# `useClerk()`
 
 The `useClerk` hook provides access to the the Clerk object, giving you the ability to build alternatives to any Clerk Component.
 
