--- a/src/pages/reference-react/internals/use-session-list.mdx
+++ b/src/pages/reference-react/internals/use-session-list.mdx
@@ -2,7 +2,7 @@ import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
 
-# useSessionList
+# `useSessionList()`
 
 The `useSessionList` hook provides returns an array of Session objects that have been registered on the client device.
 
