--- a/src/pages/reference-react/internals/use-session.mdx
+++ b/src/pages/reference-react/internals/use-session.mdx
@@ -2,7 +2,7 @@ import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
 
-# useSession
+# `useSession()`
 
 The `useSession` hook provides access to the the current user Session object, and helpers to set the active session.
 
@@ -15,7 +15,7 @@ import { useSession } from "@clerk/nextjs";
 
 export default function Home() {
   const { isLoaded, session,isSignedIn } = useSession();
-  
+
   if (!isLoaded) {
     // handle loading state
     return null;
@@ -24,10 +24,10 @@ export default function Home() {
     // handle not signed in state
     return null;
   }
-  
+
   return (
-    <div> 
-      <p>This session has been active 
+    <div>
+      <p>This session has been active
       since {session.lastActiveAt.toLocaleString()}
       </p>
     </div>
@@ -41,7 +41,7 @@ import { useSession } from "@clerk/clerk-react";
 
 export default function Home() {
   const { isLoaded, session,isSignedIn } = useSession();
-  
+
   if (!isLoaded) {
     // handle loading state
     return null;
@@ -50,10 +50,10 @@ export default function Home() {
     // handle not signed in state
     return null;
   }
-  
+
   return (
-    <div> 
-      <p>This session has been active 
+    <div>
+      <p>This session has been active
       since {session.lastActiveAt.toLocaleString()}
       </p>
     </div>
