chore: add framework list component and logos
* Add .svg files for framework logos
* Fix Twitter and Discord logos not changing color with theme change
* Add FrameworkCards component for Quickstarts page

--- a/src/pages/get-started/setup-clerk.mdx
+++ b/src/pages/get-started/setup-clerk.mdx
@@ -1,4 +1,4 @@
-import {Cards} from "@/components/Cards";
+import {FrameworkCards} from "@/components/FrameworkCards";
 import { Steps } from 'nextra-theme-docs'
 
 # Setup Clerk
@@ -71,21 +71,21 @@ Creating a Clerk account and using it in your apps is a simple three-step proces
 
   <div className="container mx-auto my-4">
     <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
-      <Cards title="React" description="Set up your React codebase to integrate with Clerk." link="/quickstarts/frontend/react" cta="Get Started" />
+      <FrameworkCards title="React" description="Get started installing and initializing Clerk in a new Create React App." link="/quickstarts/frontend/react" cta="Get Started" logo="/images/logos/react.svg" />
 
-      <Cards title="Next.js" description="Set up your Next.js codebase to integrate with Clerk." link="/quickstarts/full-stack/stable" cta="Get Started" />
+      <FrameworkCards title="Next.js" description="Easily add secure, beautiful, and fast authentication to Next.js with Clerk." link="/quickstarts/full-stack/stable" cta="Get Started" logo="/images/logos/nextjs.svg" logoWidth="40" />
 
-      <Cards title="Remix" description="Set up your Remix codebase to integrate with Clerk." link="/quickstarts/full-stack/remix" cta="Get Started" />
+      <FrameworkCards title="Remix" description="Easily add secure, edge- and SSR-friendly authentication to Remix with Clerk." link="/quickstarts/full-stack/remix" cta="Get Started" logo="/images/logos/remix.svg" />
 
-      <Cards title="RedwoodJS" description="Set up your RedwoodJS codebase to integrate with Clerk." link="/quickstarts/full-stack/remix" cta="Get Started" />
+      <FrameworkCards title="RedwoodJS" description="Grow your RedwoodJS application with Clerk user management and authentication." link="/quickstarts/full-stack/remix" cta="Get Started" logo="/images/logos/redwood.svg" />
 
-      <Cards title="Expo / React Native" description="Set up your Expo or React Native codebase to integrate with Clerk." link="/quickstarts/native/expo" cta="Get Started" />
+      <FrameworkCards title="Expo / React Native" description="Use Clerk with Expo to authenticate users in your React Native application." link="/quickstarts/native/expo" cta="Get Started" logo="/images/logos/expo.svg"/ >
 
-      <Cards title="Express.js" description="Set up your Express.js codebase to integrate with Clerk." link="#" cta="Coming Soon" hideArrow={true} />
+      <FrameworkCards title="Express.js" description="Add authentication and user management to your Express.js application." link="#" cta="Coming Soon" hideArrow={true} logo="/images/logos/express.svg" />
 
-      <Cards title="Fastify" description="Set up your Fastify codebase to integrate with Clerk." link="#" cta="Coming Soon" hideArrow={true} />
+      <FrameworkCards title="Fastify" description="Learn about installing and initializing Clerk in a new Fastify application." link="#" cta="Coming Soon" hideArrow={true} logo="/images/logos/fastify.svg" />
 
-      <Cards title="Ruby / Rails" description="Set up your Ruby codebase to integrate with Clerk." link="#" cta="Coming Soon" hideArrow={true} />
+      <FrameworkCards title="Ruby / Rails" description="Integrate user management and authentication into your Ruby application." link="#" cta="Coming Soon" hideArrow={true} logo="/images/logos/ruby.svg" />
     </div>
   </div>
 </Steps>
