chore: shrink new svg files
chore: fix spacing

chore: shrink new svg files

--- a/src/pages/get-started/setup-clerk.mdx
+++ b/src/pages/get-started/setup-clerk.mdx
@@ -79,11 +79,11 @@ Creating a Clerk account and using it in your apps is a simple three-step proces
 
       <FrameworkCards title="RedwoodJS" description="Grow your RedwoodJS application with Clerk user management and authentication." link="/quickstarts/full-stack/remix" cta="Get Started" logo="/images/logos/redwood.svg" />
 
-      <FrameworkCards title="Expo / React Native" description="Use Clerk with Expo to authenticate users in your React Native application." link="/quickstarts/native/expo" cta="Get Started" logo="/images/logos/expo.svg"/ >
+      <FrameworkCards title="Expo / React Native" description="Use Clerk with Expo to authenticate users in your React Native application." link="/quickstarts/native/expo" cta="Get Started" logo="/images/logos/expo.svg" />
 
-      <FrameworkCards title="Express.js" description="Add authentication and user management to your Express.js application." link="#" cta="Coming Soon" hideArrow={true} logo="/images/logos/express.svg" />
+      <FrameworkCards title="Express.js" description="Add authentication and user management to your Express.js application." link="#" cta="Coming Soon" hideArrow={true} logo="/images/logos/express.svg" logoWidth="30" />
 
-      <FrameworkCards title="Fastify" description="Learn about installing and initializing Clerk in a new Fastify application." link="#" cta="Coming Soon" hideArrow={true} logo="/images/logos/fastify.svg" />
+      <FrameworkCards title="Fastify" description="Learn about installing and initializing Clerk in a new Fastify application." link="#" cta="Coming Soon" hideArrow={true} logo="/images/logos/fastify.svg" logoWidth="40" />
 
       <FrameworkCards title="Ruby / Rails" description="Integrate user management and authentication into your Ruby application." link="#" cta="Coming Soon" hideArrow={true} logo="/images/logos/ruby.svg" />
     </div>
