--- a/src/pages/reference-react/general/clerk-provider.mdx
+++ b/src/pages/reference-react/general/clerk-provider.mdx
@@ -80,47 +80,55 @@ ReactDOM.render(
 
 <Tables
   headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: '300px'}]}
   rows={[
     {
       cells: [
         "publishableKey",
         "string",
-        `Clerk publishable key for your instance.\nThis can be found in your clerk Dashboard.`,
+        `Clerk publishable key for your instance. This can be found in your Clerk Dashboard.`,
       ],
     },
     {
       cells: [
         "frontendApi",
         "string",
-        "The frontend API host for your instance.\nThis can be found in your clerk Dashboard.",
+        "The frontend API host for your instance. This can be found in your Clerk Dashboard.",
       ],
     },
     {
       cells: [
         "navigate?",
         "(to: string) => Promise<any> | void",
-        "A function which takes the destination path as\nan argument and performs a \"push\" navigation.",
+        "A function which takes the destination path asan argument and performs a \"push\" navigation.",
       ],
     },
     {
       cells: [
         "clerkJSVariant?",
         "string",
-        "If your web application uses only Control\ncomponents you can set this value to headless\nand load a minimal ClerkJS bundle for optimal\npage performance.",
+        "If your web application uses only Control components you can set this value to headless and load a minimal ClerkJS bundle for optimal page performance.",
       ],
     },
     {
       cells: [
         "supportEmail?",
         "string",
-        "Optional support email for display in\nauthentication screens. Will only affect Clerk\nComponents and not Clerk Hosted pages.",
+        "Optional support email for display in authentication screens. Will only affect Clerk Components and not Clerk Hosted pages.",
       ],
     },
     {
       cells: [
         "localization?",
         "object",
-        "Optional object to localize your Components.\nWill only affect Clerk Components and\nnot Clerk Hosted pages.",
+        "Optional object to localize your Components. Will only affect Clerk Components and not Clerk Hosted pages.",
+      ],
+    },
+    {
+      cells: [
+        "allowedRedirectOrigins?",
+        "Array<string | RegExp>",
+        "Optional array of domains used to validate against the query param of an auth redirect.\n\nIf no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console.",
       ],
     },
   ]}
