chore: create auth provider card component
* add new .svg files for auth providers
* add component for auth providers overview page
* change prop name from logo to icon

--- a/src/pages/users/authentication-providers/overview.mdx
+++ b/src/pages/users/authentication-providers/overview.mdx
@@ -1,4 +1,4 @@
-import {Cards} from "@/components/Cards";
+import {AuthProvidersCards} from "@/components/AuthProvidersCards";
 
 # Authentication Providers
 
@@ -6,27 +6,27 @@ Clerk provides a wide range of application providers to ease your user's sign-up
 
 <div className="container mx-auto my-4">
     <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
-        <Cards title="Facebook" description="Add Facebook as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="Twitter" description="Add Twitter as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="TikTok" description="Add TikTok as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="Discord" description="Add Discord as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="Twitch" description="Add Twitch as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="GitHub" description="Add GitHub as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="GitLab" description="Add GitLab as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="LinkedIn" description="Add LinkedIn as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="HubSpot" description="Add HubSpot as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="Atlassian" description="Add Atlassian as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="Bitbucket" description="Add Bitbucket as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="Dropbox" description="Add Dropbox as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="Microsoft" description="Add Microsoft as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="Notion" description="Add Notion as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="Apple" description="Add Apple as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="LINE" description="Add LINE as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="Coinbase" description="Add Coinbase as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="Spotify" description="Add Spotify as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="Box" description="Add Box as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="Xero" description="Add Xero as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="Slack" description="Add Slack as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
-        <Cards title="Linear" description="Add Linear as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} />
+        <AuthProvidersCards title="Facebook" description="Add Facebook as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/facebook.svg" />
+        <AuthProvidersCards title="Twitter" description="Add Twitter as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/twitter.svg" />
+        <AuthProvidersCards title="TikTok" description="Add TikTok as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/tiktok.svg" />
+        <AuthProvidersCards title="Discord" description="Add Discord as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/discord.svg" />
+        <AuthProvidersCards title="Twitch" description="Add Twitch as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/twitch.svg" />
+        <AuthProvidersCards title="GitHub" description="Add GitHub as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/github.svg" />
+        <AuthProvidersCards title="GitLab" description="Add GitLab as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/gitlab.svg" />
+        <AuthProvidersCards title="LinkedIn" description="Add LinkedIn as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/linkedin.svg" />
+        <AuthProvidersCards title="HubSpot" description="Add HubSpot as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/hubspot.svg" />
+        <AuthProvidersCards title="Atlassian" description="Add Atlassian as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/atlassian.svg" />
+        <AuthProvidersCards title="Bitbucket" description="Add Bitbucket as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/bitbucket.svg" />
+        <AuthProvidersCards title="Dropbox" description="Add Dropbox as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/dropbox.svg" />
+        <AuthProvidersCards title="Microsoft" description="Add Microsoft as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/microsoft.svg" />
+        <AuthProvidersCards title="Notion" description="Add Notion as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/notion.svg" />
+        <AuthProvidersCards title="Apple" description="Add Apple as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/apple.svg" />
+        <AuthProvidersCards title="LINE" description="Add LINE as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/line.svg" />
+        <AuthProvidersCards title="Coinbase" description="Add Coinbase as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/coinbase.svg" />
+        <AuthProvidersCards title="Spotify" description="Add Spotify as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/spotify.svg" />
+        <AuthProvidersCards title="Box" description="Add Box as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/box.svg" iconWidth="40" />
+        <AuthProvidersCards title="Xero" description="Add Xero as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/xero.svg" />
+        <AuthProvidersCards title="Slack" description="Add Slack as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/slack.svg" />
+        <AuthProvidersCards title="Linear" description="Add Linear as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/linear.svg" />
     </div>
 </div>
