chore: add framework cards component with icons to main page

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,44 +1,53 @@
 import {Hero} from "@/components/Hero";
 import {Cards} from "@/components/Cards";
+import {FrameworkCards} from "@/components/FrameworkCards"
 
 <Hero/>
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
-    <Cards
+    <FrameworkCards
       title="Next.js Stable"
       description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application."
       link="/nextjs/stable"
       cta="Get Started"
+      icon="/images/logos/nextjs.svg"
+      iconWidth="40"
     />
-    <Cards
+    <FrameworkCards
       title="Next.js App Router"
       description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js using RSC."
       link="/nextjs/app-router"
       cta="Get Started"
+      icon="/images/logos/nextjs.svg"
+      iconWidth="40"
     />
-    <Cards
+    <FrameworkCards
       title="React"
       description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your React application."
       link="/react"
       cta="Get Started"
+      icon="/images/logos/react.svg"
     />
-    <Cards
+    <FrameworkCards
       title="Remix"
       description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Remix application."
       link="/remix"
       cta="Get Started"
+      icon="/images/logos/remix.svg"
     />
-    <Cards
+    <FrameworkCards
       title="Expo"
       description="Learn how to use Clerk to add secure authentication and user management to your Expo application using custom flows."
       link="/expo"
       cta="Get Started"
+      icon="/images/logos/expo.svg"
     />
-    <Cards
+    <FrameworkCards
       title="RedwoodJS"
       description="Learn how to use Clerk to add secure authentication and user management to your RedwoodJS application"
       link="/redwood"
       cta="Get Started"
+      icon="/images/logos/redwood.svg"
     />
   </div>
 </div>
