--- a/src/pages/quickstarts/full-stack/gatsby.mdx
+++ b/src/pages/quickstarts/full-stack/gatsby.mdx
@@ -104,7 +104,7 @@ Clerk provides a set of hooks and helpers that you can use to access the active 
 The `useAuth` hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
 
 ```tsx copy filename="pages/example.tsx"
-import { useAuth } from "@clerk/clerk-react";
+import { useAuth } from "gatsby-plugin-clerk";
 
 export default function Example() {
   const { isLoaded, userId, sessionId, getToken } = useAuth();
@@ -127,7 +127,7 @@ export default function Example() {
 The `useUser` hook is a convenient way to access the current user data where you need it. This hook provides the user data and helper methods to manage the current active session.
 
 ```tsx copy filename="pages/example.tsx"
-import { useUser } from "@clerk/clerk-react";
+import { useUser } from "gatsby-plugin-clerk";
 
 export default function Example() {
   const { isLoaded, isSignedIn, user } = useUser();
