--- a/src/pages/advanced-usage/session-token.mdx
+++ b/src/pages/advanced-usage/session-token.mdx
@@ -14,7 +14,7 @@ Clerk has default claims that will be included in this session token. You can re
 
 <Steps>
 
-### Step 1: Go to Sessions in the Clerk Dashboard
+### Go to Sessions in the Clerk Dashboard
 
 Firstly you need to go to the Sessions tab in the Clerk Dashboard.
 <Images
@@ -24,7 +24,7 @@ height={1748}
 alt="Clerk Dashboard with a session token"
 />
 
-### Step 2: Click the Edit button
+### Click the Edit button
 
 Next from the menu select the Edit button.
 
@@ -32,10 +32,10 @@ Next from the menu select the Edit button.
 src="/images/advance/session-tokens/clerk-session-edit.png"
 width={3024}
 height={1748}
-alt="Clerk Dashboard with a session token"
+alt="Clerk Dashboard with an arrow pointing to the edit"
 />
 
-### Step 3: Add a new claim to the session token
+### Add a new claim to the session token
 
 At this point you are able to select all the session tokens you need. In this example we are adding a new claim called `fullName` and `primaryEmail` to the session token.
 
@@ -43,10 +43,10 @@ At this point you are able to select all the session tokens you need. In this ex
 src="/images/advance/session-tokens/custom-session-example.png"
 width={3024}
 height={1748}
-alt="Clerk Dashboard with a session token"
+alt="Clerk Dashboard showing the custom claim modal"
 />
 
-### Step 4: Using the custom claims in your application
+### Using the custom claims in your application
 
 Now that you have added the custom claims to your session token, you can use them in your application. Below is an example of how you can access the custom claims in your application.
 
