Add manual JWT to reference

--- a/src/pages/advanced-usage/manual-jwt.mdx
+++ b/src/pages/advanced-usage/manual-jwt.mdx
@@ -20,7 +20,7 @@ Retrieve the session token from either `__session` cookie for a same origin requ
 
 There are three ways to obtain your public key:
 
-1. Using the Backend API in JSON Web Key Set (JWKS) format at the following endpoint https://api.clerk.dev/v1/jwks [JWKs ](https://clerk.com/docs/reference/backend-api/tag/JWKS#operation/GetJWKS).
+1. Using the Backend API in JSON Web Key Set (JWKS) format at the following endpoint [https://api.clerk.dev/v1/jwks](https://clerk.com/docs/reference/backend-api/tag/JWKS#operation/GetJWKS).
 2. Using the Frontend API in JSON Web Key Set (JWKS) format at the following endpoint `https://<YOUR_FRONTEND_API>/.well-known/jwks.json`. This can be obtained from the Dashboard Api Keys > Advanced > JWT Public Key.
 3. Using the public key provided by Clerk in the dashboard under Api Keys > Advanced > JWT Public Key.
 
