--- a/src/pages/reference-platform/session-tokens.mdx
+++ b/src/pages/reference-platform/session-tokens.mdx
@@ -24,3 +24,5 @@ If you want to customize your session token, you can do that by following our gu
 
 ## How do I validate a session token?
 If you're using the middleware provided by our Clerk SDKs, this is all handled automatically in every request. If you're not using the middleware, you can still use the respective helpers provided by the SDKs to validate the tokens.
+
+To learn how to manually verify a session token, please refer to the [manual JWT verification ](/advanced-usage/manual-jwt) section of our documentation.
