--- a/src/pages/quickstarts/clerk-idp.mdx
+++ b/src/pages/quickstarts/clerk-idp.mdx
@@ -1,11 +1,12 @@
 import { Callout } from "nextra-theme-docs";
+import {Steps} from "nextra-theme-docs";
 import { Images } from "@/components/Images";
 
-# Use Clerk as an OAuth 2 Provider 
+# Use Clerk as an OAuth 2 Provider
 
-Learn how to use Clerk to facilitate Single Sign-On (SSO) with other clients that support the OAuth 2.0 protocol. 
+Learn how to use Clerk to facilitate Single Sign-On (SSO) with other clients that support the OAuth 2.0 protocol.
 
-&nbsp;  
+&nbsp;
 
 
 <Images
@@ -15,18 +16,18 @@ Learn how to use Clerk to facilitate Single Sign-On (SSO) with other clients tha
   alt="Clerk IDP Flow"
 />
 
-
-## Step 1: Retrieve Callback URL from the client application
+<Steps>
+### Retrieve Callback URL from the client application
 
 Retrieve the **Callback URL** for the client application you want to configure. This is where your users will be redirected to after a successful authentication and is required to successfully create your OAuth application in the next step.
 
 
-## Step 2: Create an OAuth Application in Clerk
+### Create an OAuth Application in Clerk
 
 Next, you need to create an OAuth Application in Clerk via the [Backend API](https://clerk.com/docs/reference/backend-api/tag/OAuth-Applications) by providing the Callback URL and a Name. Note that in this context the name is used to help you identify your application and is not displayed anywhere publicly.
 
 ```sh copy filename="POST /v1/oauth_applications"
-curl 
+curl
  -X POST https://api.clerk.com/v1/oauth_applications \
  -H "Authorization: Bearer <CLERK_SECRET_KEY>"  \
  -H "Content-Type: application/json" \
@@ -59,7 +60,7 @@ Clerk creates an OAuth application and returns it's configurations back to you.
 </Callout>
 
 
-## Step 3: Configure OAuth Application in client
+### Configure OAuth Application in client
 
 Now that you have setup an OAuth application in Clerk, you will need to configure these settings in your Client.
 
@@ -68,5 +69,5 @@ Now that you have setup an OAuth application in Clerk, you will need to configur
 * **Authorization URL**: Used by the Client to request authorization from your user
 * **Token URL**: Used by the Client to retrieve access tokens
 * **Scopes**: OAuth scopes used to grant access to the Client. Clerk only supports `profile` and `email` at this point
-* **User Info URL**: Used by the Client to retrieve the email address and profile (username, first and last name) associated to your user 
-
+* **User Info URL**: Used by the Client to retrieve the email address and profile (username, first and last name) associated to your user
+</Steps>
