--- a/src/pages/quickstarts/frontend/react.mdx
+++ b/src/pages/quickstarts/frontend/react.mdx
@@ -1,4 +1,5 @@
 import { Tab, Tabs } from "nextra-theme-docs";
+import {Steps} from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { YouTube } from "@/components/Youtube";
 import { Images } from "@/components/Images";
@@ -9,7 +10,9 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 Learn how to use Clerk to quickly and easily add secure authentication and user management to your React application.
 
-## Install @clerk/clerk-react
+<Steps>
+
+### Install @clerk/clerk-react
 
 Once you have a React application ready, you need to install Clerk's React SDK. This gives you access to our prebuilt components and hooks for React applications.
 
@@ -27,15 +30,15 @@ Once you have a React application ready, you need to install Clerk's React SDK. 
   ```
 </CodeBlockTabs>
 
-## Set Environment Keys
+### Set Environment Keys
 
-Below is an example of your .env.local file. To get the respective keys go to the API Keys page in the Clerk dashboard.
+Below is an example of your .env.local file. To get the respective keys go to the [API Keys](https://dashboard.clerk.dev/last-active?path=api-keys) page in the Clerk dashboard.
 
 ```sh copy filename=".env.local"
 REACT_APP_CLERK_PUBLISHABLE_KEY=pk_test_••••••••••••••••••••••••••••••••••
 ```
 
-## Configure `<ClerkProvider>`
+### Configure `<ClerkProvider>`
 
 Clerk requires your React application to be wrapped in the `<ClerkProvider/>` component. The `<ClerkProvider />` component provides active session and user context to Clerk's hooks and other components.
 
@@ -60,7 +63,7 @@ function App() {
 export default App;
 ```
 
-## Protecting Your Pages
+### Protecting Your Pages
 
 Clerk offers Control Components that allow you to protect your pages, below is a simple example using Clerk's hosted components and the `<SignedIn/>` and `<SignedOut/>` control components.
 
@@ -102,7 +105,7 @@ function Welcome() {
 export default App;
 ```
 
-## Using a Routing Library with clerk
+#### Using a Routing Library with clerk
 
 Clerk can work with any routing library, below is an example of how to use Clerk with React Router and embedding the Clerk components in your application.
 
@@ -189,7 +192,7 @@ function App() {
 export default App;
 ```
 
-## Read Session & User Data
+### Read Session & User Data
 
 Clerk provides a set of hooks and helpers that you can use to access the active session and user data in your React application. We have included examples of how to use these helpers to get you started.
 
@@ -233,8 +236,9 @@ export default function Example() {
   return <div>Hello, {user.firstName} welcome to Clerk</div>;
 }
 ```
+</Steps>
 
-## Next Steps
+### Next Steps
 
 Now you have an application integrated with Clerk you will want to read the following documentation:
 
