--- a/src/pages/quickstarts/native/expo.mdx
+++ b/src/pages/quickstarts/native/expo.mdx
@@ -1,5 +1,6 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
+import {Steps} from "nextra-theme-docs";
 import { YouTube } from "@/components/Youtube";
 import { Images } from "@/components/Images";
 import {Cards} from "@/components/Cards";
@@ -9,7 +10,8 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 Learn how to use Clerk to quickly and easily add secure authentication and user management to your Expo application.
 
-## Install @clerk/clerk-expo
+<Steps>
+### Install @clerk/clerk-expo
 
 Once you have a Expo application ready, you need to install Clerk's Expo SDK.
 
@@ -33,7 +35,7 @@ Once you have a Expo application ready, you need to install Clerk's Expo SDK.
   </Tab>
 </Tabs>
 
-## Set Environment Variables
+### Set Environment Variables
 
 Below is an example of an `app.config.js` file. To get your keys go to the API Keys page on the [Clerk dashboard](https://dashboard.clerk.com).
 
@@ -52,7 +54,7 @@ module.exports = {
 </Callout>
 
 
-## Mount `<ClerkProvider>`
+### Mount `<ClerkProvider>`
 
 Update your app entry file to include the `<ClerkProvider>` wrapper. The `<ClerkProvider>` component wraps your Expo application to provide active session and user context to Clerk's hooks and other components. It is recommended that the `<ClerkProvider>` wraps everything else to enable the context to be accessible anywhere within the app.
 
@@ -82,7 +84,7 @@ const styles = StyleSheet.create({
 });
 ```
 
-## Protecting Your Pages
+### Protecting Your Pages
 
 Clerk offers Control Components that allow you to protect your pages. In the example below we are using [`<SignedIn/>`](/components/user-management/signed-in) and [`<SignedOut/>`](components/user-management/signed-out) control components.
 
@@ -123,7 +125,7 @@ Using expo requires you to create custom flows in our quickstart guide, we are g
   The following flows are built on the default instance settings for Clerk. If you have changed your instance settings, you may need to make changes to the following code.
 </Callout>
 
-## Build Your Sign Up
+### Build Your Sign Up
 
 The examples below use email and password to sign a user up. You will notice that we have a conditonal flow in the sign up page for verifying a code called `pendingVerification`, this is an important step as it verifies the user owns their email.
 
@@ -263,7 +265,7 @@ const styles = StyleSheet.create({
 });
 ```
 
-## Build Your Sign In
+### Build Your Sign In
 
 ```tsx filename="components/SignInScreen.tsx" copy
 import React from "react";
@@ -358,7 +360,7 @@ const styles = StyleSheet.create({
 });
 ```
 
-## OAuth Login
+### OAuth Login
 
 If you want to add OAuth login flows to you Expo application, in most cases you want to be able to handle both sign in and sign up in a single flow. With Clerk we make this possible with our OAuth hook.
 
@@ -454,14 +456,14 @@ const styles = StyleSheet.create({
 });
 ```
 
-## Adding a token cache
+### Adding a token cache
 
 A token cache is important for persisting your JWT. By default Clerk holds it in memory, however this method shouldn't be used for Production applications.
 Expo provides a way to encrypt and securely store key–value pairs locally on the device via [`expo-secure-store`](https://docs.expo.dev/versions/v47.0.0/sdk/securestore/).
 
 You can use it as your client JWT storage by setting the `tokenCache` prop in your `<ClerkProvider/>` as shown below.
 
-### Install expo-secure-store
+#### Install expo-secure-store
 
 <Tabs items={["npm", "yarn", "pnpm"]}>
   <Tab>
@@ -538,7 +540,7 @@ const styles = StyleSheet.create({
 });
 ```
 
-## Signing a user out
+### Signing a user out
 
 To sign a user out you can use the `signOut` method from the `useAuth` hook. This will remove the JWT from the token cache and remove the session.
 
@@ -613,7 +615,7 @@ const styles = StyleSheet.create({
 });
 ```
 
-## Read Session & User Data
+### Read Session & User Data
 
 Clerk provides a set of hooks and helpers that you can use to access the active session and user data in your Expo application. We have included examples of how to use these helpers to get you started.
 
@@ -659,8 +661,8 @@ export default function UseUserExample() {
   return <Text>Hello, {user.firstName} welcome to Clerk</Text>;
 }
 ```
-
-## Next Steps
+</Steps>
+### Next Steps
 
 Now you have an application integrated with Clerk you will want to read the following documentation:
 
