Fix the heading

--- a/src/pages/quickstarts/backend/fastify.mdx
+++ b/src/pages/quickstarts/backend/fastify.mdx
@@ -148,7 +148,7 @@ fastify.get("/protected", async (request, reply) => {
 ```
 </Steps>
 
-## Using Clerk for specific routes only
+### Using Clerk for specific routes only
 
 If you want to use Clerk for specific routes only, you can register the plugin for specific routes. In the example below we will split the routes into two groups, one for public routes and one for private routes.
 
