--- a/src/pages/quickstarts/full-stack/gatsby.mdx
+++ b/src/pages/quickstarts/full-stack/gatsby.mdx
@@ -142,7 +142,7 @@ export default function Example() {
 }
 ```
 
-## SSR Usage
+### SSR Usage
 
 ```tsx copy filename="pages/SSRPage.tsx"
 import * as React from 'react';
