docs: finish initial draft of remix docs

--- a/src/pages/reference-remix/clerk-catch-boundary.mdx
+++ b/src/pages/reference-remix/clerk-catch-boundary.mdx
@@ -1,13 +1,14 @@
+import { Tables } from "@/components/Table";
+
 # `ClerkCatchBoundary()`
 
-Clerk uses short-lived tokens to keep your application secure. To refresh expired tokens Clerk uses Remix's catch boundary.
+Clerk uses short-lived tokens to keep your application secure. To refresh expired tokens Clerk [uses Remix's catch boundary feature](https://remix.run/docs/en/main/route/catch-boundary).
 
 > If you do not implement this into your app, you will see a 401 after a short period of time even though your user is logged in.
 
 ## Usage
 
-```tsx
-import { ClerkApp } from "@clerk/remix";
+```tsx {13, 23-24}
 import type { MetaFunction, LoaderFunction } from "@remix-run/node";
 
 import {
@@ -29,6 +30,7 @@ export const meta: MetaFunction = () => ({
 });
 
 export const loader: LoaderFunction = (args) => rootAuthLoader(args);
+
 // add a Catch Boundary
 export const CatchBoundary = ClerkCatchBoundary();
 
@@ -51,3 +53,26 @@ function App() {
 
 export default ClerkApp(App);
 ```
+
+If you need to add a custom boundary to your application you can pass it as an argument to the `ClerkCatchBoundary`.
+
+```tsx
+export const CatchBoundary = ClerkCatchBoundary(YourBoundary);
+```
+
+## Props
+
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: '300px'}]}
+  rows={[
+    {
+      cells: [
+        <code>RootCatchBoundary?</code>,
+        <code>React.ReactNode</code>,
+        `A optional component used as your application boundary.`,
+      ],
+    }
+  ]}
+/>
