--- a/src/pages/reference-react/general/clerk-provider.mdx
+++ b/src/pages/reference-react/general/clerk-provider.mdx
@@ -84,50 +84,50 @@ ReactDOM.render(
   rows={[
     {
       cells: [
-        "publishableKey",
-        "string",
+        <code>publishableKey</code>,
+        <code>string</code>,
         `Clerk publishable key for your instance. This can be found in your Clerk Dashboard.`,
       ],
     },
     {
       cells: [
-        "frontendApi",
-        "string",
+        <code>frontendApi</code>,
+        <code>string</code>,
         "The frontend API host for your instance. This can be found in your Clerk Dashboard.",
       ],
     },
     {
       cells: [
-        "navigate?",
-        "(to: string) => Promise<any> | void",
+        <code>navigate?</code>,
+        <code>{`(to: string) => Promise<unknown> | void`}</code>,
         "A function which takes the destination path asan argument and performs a \"push\" navigation.",
       ],
     },
     {
       cells: [
-        "clerkJSVariant?",
-        "string",
+        <code>clerkJSVariant?</code>,
+        <code>string</code>,
         "If your web application uses only Control components you can set this value to headless and load a minimal ClerkJS bundle for optimal page performance.",
       ],
     },
     {
       cells: [
-        "supportEmail?",
-        "string",
+        <code>supportEmail?</code>,
+        <code>string</code>,
         "Optional support email for display in authentication screens. Will only affect Clerk Components and not Clerk Hosted pages.",
       ],
     },
     {
       cells: [
-        "localization?",
-        "object",
+        <code>localization?</code>,
+        <code>object</code>,
         "Optional object to localize your Components. Will only affect Clerk Components and not Clerk Hosted pages.",
       ],
     },
     {
       cells: [
-        "allowedRedirectOrigins?",
-        "Array<string | RegExp>",
+        <code>allowedRedirectOrigins?</code>,
+        <code>{`Array<string | RegExp>`}</code>,
         "Optional array of domains used to validate against the query param of an auth redirect.\n\nIf no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console.",
       ],
     },
