--- a/src/pages/reference-remix/clerk-app.mdx
+++ b/src/pages/reference-remix/clerk-app.mdx
@@ -1,10 +1,12 @@
+import { Tables } from "@/components/Table";
+
 # `<ClerkApp />`
 
 Clerk provides a `ClerkApp` wrapper to provide the authentication state to your React tree. This helper works with Remix SSR out-of-the-box and follows the "higher-order component" paradigm.
 
 ## Usage
 
-```tsx
+```tsx {1, 40-41}
 import { ClerkApp } from "@clerk/remix";
 import type { MetaFunction,LoaderFunction } from "@remix-run/node";
 
@@ -18,8 +20,6 @@ import {
 } from "@remix-run/react";
 
 import { rootAuthLoader } from "@clerk/remix/ssr.server";
-// Import ClerkApp
-import { ClerkApp } from "@clerk/remix";
 
 export const meta: MetaFunction = () => ({
   charset: "utf-8",
@@ -49,3 +49,57 @@ function App() {
 // Wrap your app in ClerkApp(app)
 export default ClerkApp(App);
 ```
+
+## Props
+
+`<ClerkApp>` supports [all of the same properties as `<ClerkProvider>`](/reference-react/general/clerk-provider#props) with the exception of the `navigate` property:
+
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: '300px'}]}
+  rows={[
+    {
+      cells: [
+        <code>publishableKey</code>,
+        <code>string</code>,
+        `Clerk publishable key for your instance. This can be found in your Clerk Dashboard.`,
+      ],
+    },
+    {
+      cells: [
+        <code>frontendApi</code>,
+        <code>string</code>,
+        "The frontend API host for your instance. This can be found in your Clerk Dashboard.",
+      ],
+    },
+    {
+      cells: [
+        <code>clerkJSVariant?</code>,
+        <code>string</code>,
+        "If your web application uses only Control components you can set this value to headless and load a minimal ClerkJS bundle for optimal page performance.",
+      ],
+    },
+    {
+      cells: [
+        <code>supportEmail?</code>,
+        <code>string</code>,
+        "Optional support email for display in authentication screens. Will only affect Clerk Components and not Clerk Hosted pages.",
+      ],
+    },
+    {
+      cells: [
+        <code>localization?</code>,
+        <code>object</code>,
+        "Optional object to localize your Components. Will only affect Clerk Components and not Clerk Hosted pages.",
+      ],
+    },
+    {
+      cells: [
+        <code>allowedRedirectOrigins?</code>,
+        <code>{`Array<string | RegExp>`}</code>,
+        "Optional array of domains used to validate against the query param of an auth redirect.\n\nIf no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console.",
+      ],
+    },
+  ]}
+/>
