docs: add github to auth providers

--- a/src/pages/users/authentication-providers/github.mdx
+++ b/src/pages/users/authentication-providers/github.mdx
@@ -1,3 +1,32 @@
 # GitHub
 
-> This is a stub page. Contents are coming Soon
+How to set up social connection with GitHub
+
+## Overview
+
+Adding social connection with GitHub to your app with Clerk is simple - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
+
+To make the development flow as smooth as possible, Clerk uses  preconfigured shared OAuth credentials and redirect URIs for development instances - no other configuration is needed.
+
+For production instances, you will need to generate your own Client ID and Client secret using your GitHub account.
+
+> The purpose of this guide is to help you create a GitHub account and a  GitHub OAuth app - if you're looking for step-by-step instructions using Clerk to add social connection (OAuth) to your application, follow the [Social connection (OAuth) guide](https://clerk.com/docs/authentication/social-connections-oauth).
+
+## Before you start
+
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](https://clerk.com/docs/authentication/set-up-your-application).
+- You need to have a GitHub account. To create one, [click here](https://github.com/signup).
+
+## Configuring GitHub social connection
+
+First, you need to register a new OAuth GitHub app. Follow the official GitHub instructions on [how to create an OAuth app](https://docs.github.com/en/developers/apps/building-oauth-apps/creating-an-oauth-app).
+
+![Registering an OAuth GitHub app](./github/ff83ad81ca491cf17e5a755376fae9c88148ce7c-1395x799.png)
+
+Go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) and enable GitHub. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Go back to the GitHub panel, paste the value into the **Authorization callback URL** field and complete the registration.
+
+Once registration is complete, you'll get redirected to project's admin panel. Click the **Generate a new client secret** button to get your new client secret. Then, copy the **Client ID** and **Client secret.** Go back to the Clerk Dashboard and paste them into the respective fields.
+
+![Obtaining the Client ID and Client secret](./github/3b1f58462fab3cc238c1a59994d1e2eb98f46b73-1489x964.png)
+
+Don't forget to click **Apply** in the Clerk dashboard. Social connection with GitHub is now configured.
