docs: add line to auth providers

--- a/src/pages/users/authentication-providers/line.mdx
+++ b/src/pages/users/authentication-providers/line.mdx
@@ -1,3 +1,40 @@
-# Line
+# LINE
 
-> This is a stub page. Contents are coming Soon
+How to set up social connection with LINE
+
+## Overview
+
+Adding social connection with LINE to your app with Clerk is simple - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
+
+To make the development flow as smooth as possible, Clerk uses  preconfigured shared OAuth credentials and redirect URIs for development instances - no other configuration is needed.
+
+> Clerk preconfigured shared OAuth credentials, are using **Japan** as the LINE region
+
+For production instances, you will need to generate your own Client ID and Client secret using your LINE account.
+
+> The purpose of this guide is to help you create a LINE account and a LINE  OAuth app - if you're looking for step-by-step instructions using Clerk  to add social connection (OAuth) to your application, follow the [Social connection (OAuth) guide](https://clerk.com/docs/authentication/social-connections-oauth).
+
+## Before you start
+
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](https://clerk.com/docs/authentication/set-up-your-application).
+- You need to have a LINE developer account. To create one, [click here](https://developers.line.biz/en/).
+
+## Configuring LINE social connection
+
+First, you need to create a new provider. Fill in a name and click Create.
+
+![](./line/3ad738aa92914c9e778ee4cd861ed0cf5cf34d03-1909x779.png)
+
+The next step is to create a new **LINE Login channel.** You will have to select the provider you created before, the region to  provide your LINE service, a channel name and description and finally  select Web app as the App type.
+
+In  the next screen, after the app has been created, you will find the Basic settings of the application. If you want users to also make email  address available for your application, you will have to apply for **Email address permission**  in the bottom of your app Basic settings.
+
+You also need to add the **OAuth Redirect URLs.** Go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social)
+
+and enable LINE. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Paste the value into the **LINE login -> Callback URL** input.
+
+Once all the above are complete, copy the **Channel ID** and **Channel secret.** Go back to the Clerk Dashboard and paste them into the respective fields.
+
+![](./line/fcec2741d1d9210fd18ab94415e50253ef7eb77f-1908x782.png)
+
+Don't forget to click **Apply** in the Clerk dashboard. Social connection with LINE is now configured.
