docs: add twitter to auth providers

--- a/src/pages/users/authentication-providers/twitter.mdx
+++ b/src/pages/users/authentication-providers/twitter.mdx
@@ -1,3 +1,40 @@
 # Twitter
 
-> This is a stub page. Contents are coming Soon
+How to set up social connection with Twitter
+
+## Overview
+
+Adding social connection with Twitter to your app with Clerk is simple - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
+
+To make the development flow as smooth as possible, Clerk uses  preconfigured shared OAuth credentials and redirect URIs for development instances - no other configuration is needed.
+
+For production instances, you will need to generate your own Client ID and Client Secret using your Twitter account.
+
+> The purpose of this guide is to help you create a Twitter account and a  Twitter OAuth app - if you're looking for step-by-step instructions  using Clerk to add social connection (OAuth) to your application, follow the [Social connection (OAuth) guide](https://clerk.com/docs/authentication/social-connections-oauth).
+
+## Before you start
+
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](https://clerk.com/docs/authentication/set-up-your-application).
+- You need to have a Twitter Application set up so it can be used for Social  connection. If you don't have a Twitter Application, click [here](https://developer.twitter.com/en/docs/apps/overview) for instructions on how to create one. If you already have one, please go to your [Twitter app settings](https://developer.twitter.com/content/developer-twitter/en/docs/basics/developer-portal/guides/apps) and ensure that the *"Allow this app to be used to Sign in with Twitter?*” option is enabled.
+
+## Configuring Twitter social connection
+
+If you don't have an existing Twitter Application you've set up for social connection, you need to register a new one at the [Twitter Developer Portal](https://developer.twitter.com/en/portal/dashboard). Note that the process requires approval from Twitter before your new application can be used.
+
+To do so, go to "[Projects & Apps](https://developer.twitter.com/en/portal/projects-and-apps)" and click "**+ Create App**" to create a new application. After entering a name, you'll be presented with your app's credentials; **API Key** and **API Secret**. Copy those values; we're going to use them in a while.
+
+> You will need your application to be approved for elevated status to be  able to use it with Clerk. You can apply for the status in [Twitter developer dashboard](https://developer.twitter.com/en/portal/products/elevated)
+
+Go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) and enable Twitter. In the modal that opened, ensure **Use custom credentials** is enabled and paste the **API Key** and **API Secret** values which we copied in the previous step, into the **API key** and **API secret key** respectively. Then, copy the **Authorized redirect URI,** we're going to need it shortly after.
+
+Navigate to your application settings screen and scroll down to the **User authentication settings** section and click **Set up**.
+
+![Setting up User Authentication settings of a Twitter app](./twitter/a5b63a206cc6a04fd8b143dd191483c4f6e81d66-979x618.png)
+
+In the next screen you'll be presented with the user authentication settings. Make sure that both **OAuth 1.0a** and **Request email address from users** are enabled.
+
+Also, enter the **Authorized Redirect URI** that we grabbed in the previous step from your Clerk instance's settings and insert it in the **Callback URI** setting. Your app's settings should like similar to the ones below.  Fill any other required fields and click save. Your Twitter App is now  ready.
+
+![Fill in the Callback URI](./twitter/89fc23c0ac843ba74831c669e17c44a31896a8d7-1196x954.png)
+
+Don't forget to click **Apply** in the Clerk dashboard. Social connection with Twitter is now configured.
