feat(localization): add jaJP

--- a/src/pages/reference-react/customization/localization.mdx
+++ b/src/pages/reference-react/customization/localization.mdx
@@ -14,6 +14,7 @@ The `@clerk/localizations` package contains predefined localizations for the Cle
 *   esES for es-ES
 *   itIT for it-IT
 *   ptBR for pt-BR
+*   jaJP for ja-JP
 *   enUS for en-US (default)
 
 ### Usage
