Link back to webhooks

--- a/src/pages/integrations/webhooks.mdx
+++ b/src/pages/integrations/webhooks.mdx
@@ -112,3 +112,7 @@ const handler = req => {
   }
 }
 ```
+
+## How to use webhooks
+
+We have a guide on how to use webhooks to sync your data to your database check it out [here](/users/guides/sync-data-to-your-backend).
